--- a/invoicing-dashboard/package.json
+++ b/invoicing-dashboard/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
